@@ -1,4 +1,4 @@
-.TH FSWEBCAM "1" "17 July 2011" "fswebcam 20110717" "User Commands"
+.TH FSWEBCAM "1" "13 January 2014" "fswebcam 20140113" "User Commands"
 .SH NAME
 fswebcam \- Small and simple webcam for *nix.
 .SH SYNOPSIS
